# rust-learn

./: .gitignore  Cargo.toml  fibonacci.rs  main.rs
departments/: Cargo.toml
departments/src/: main.rs
hello/: Cargo.toml
hello/src/: lib.rs
piglatin/: Cargo.toml
piglatin/src/: main.rs
src/: main.rs  piglatin.rs  stats.rs
stats/: Cargo.toml
stats/src/: main.rs
