[package]
name = "rust-learn"
version = "0.1.0"
authors = ["Andrey Kartashov <gorilych@gmail.com>"]
edition = "2018"
default-run = "rust-learn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[lib]
name = "rust_learn"
path = "src/lib.rs"

[[bin]]
name = "rust-learn"
path = "src/main.rs"

[[bin]]
name = "fibonacci"
path = "src/fibonacci.rs"

[[bin]]
name = "stats"
path = "src/stats.rs"

[[bin]]
name = "piglatin"
path = "src/piglatin.rs"
